# LoRaMac-node-esp32

./: .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
examples/hello_world/main/: CMakeLists.txt  main.c
src/board/generic_esp32/: generic-esp32-board.c
